--- a/index.html
+++ b/index.html
@@ -4,10 +4,55 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Grece - Homepage</title>
+  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/main.css">
 </head>
-<body>
+<body class="template-index">
+  <header class="transparent-header">
+    <nav class="navbar navbar-expand-sm">
+      <div class="container">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand me-auto logo-wrapper" href="./index.html">
+          <img src="./assets/images/logo-white.svg" class="logo-white" alt="Grece Logo White">
+          <img src="./assets/images/logo-black.svg" class="logo-black" alt="Grece Logo Black">
+        </a>
+        <div class="collapse navbar-collapse" id="mynavbar">
+          <ul class="navbar-nav align-items-center">
+            <li class="nav-item">
+              <a class="nav-link" href="javascript:void(0)">Design</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="javascript:void(0)">Offerings</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="javascript:void(0)">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn btn-outline-dark" href="./book.html">Book now</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <main>
+    <section class="hero-banner">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="caption text-light">PHOTOSHOOT STUDIO</div>
+            <h1 class="h1 text-light">An award-winning, mediterranean-inspired photoshoot location nestled in the heart of Brisbane</h1>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
   
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="./assets/js/main.js"></script>
 </body>
 </html>
