--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Grece - Homepage</title>
+
+  <link rel="icon" type="image/x-icon" href="./assets/images/favicon.jpg">
   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.css" integrity="sha512-rd0qOHVMOcez6pLWPVFIv7EfSdGKLt+eafXh4RO/12Fgr41hDQxfGvoi1Vy55QIVcQEujUE1LQrATCLl2Fs+ag==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body class="template-index">
@@ -15,7 +18,7 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand me-auto logo-wrapper" href="./index.html">
+        <a class="navbar-brand me-auto logo-wrapper" href="/">
           <img src="./assets/images/logo-white.svg" class="logo-white" alt="Grece Logo White">
           <img src="./assets/images/logo-black.svg" class="logo-black" alt="Grece Logo Black">
         </a>
@@ -46,13 +49,25 @@
           <div class="col-md-12">
             <div class="caption text-light">PHOTOSHOOT STUDIO</div>
             <h1 class="h1 text-light">An award-winning, mediterranean-inspired photoshoot location nestled in the heart of Brisbane</h1>
+
+            <div class="scroll-btn--wrapper">
+              <a href="#footer" class="scroll-btn">Scroll To Explore</a>
+            </div>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section class="rich-text">
+      <div class="container text-center">
+        <h2 class="h2 text">Perched upon a hill, Grèce captures views of Brisbane city with beautiful curves and thoughtful finishes. A true oasis-like location that pulls inspiration from Greek heritage.</h2>
+        <a href="./about.html" class="link">ABOUT GRÈCE</a>
       </div>
     </section>
   </main>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.js" integrity="sha512-Ysw1DcK1P+uYLqprEAzNQJP+J4hTx4t/3X2nbVwszao8wD+9afLjBQYjz7Uk4ADP+Er++mJoScI42ueGtQOzEA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="./assets/js/main.js"></script>
 </body>
 </html>
