--- a/index.html
+++ b/index.html
@@ -51,17 +51,51 @@
             <h1 class="h1 text-light">An award-winning, mediterranean-inspired photoshoot location nestled in the heart of Brisbane</h1>
 
             <div class="scroll-btn--wrapper">
-              <a href="#footer" class="scroll-btn">Scroll To Explore</a>
+              <a href="#RichText" class="scroll-btn">Scroll To Explore</a>
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="rich-text">
+    <section class="rich-text" id="RichText">
       <div class="container text-center">
         <h2 class="h2 text">Perched upon a hill, Grèce captures views of Brisbane city with beautiful curves and thoughtful finishes. A true oasis-like location that pulls inspiration from Greek heritage.</h2>
         <a href="./about.html" class="link">ABOUT GRÈCE</a>
+      </div>
+    </section>
+
+    <section class="logo-list">
+      <div class="container">
+        <div class="caption text-center">As Seen In</div>
+        <div class="logo-list--logos swiper">
+          <div class="swiper-wrapper">
+            <div class="logo-list--logo swiper-slide">
+              <div class="image">
+                <img src="./assets/images/TLP_1.png" width="210.0" height="54.0" alt="the Local Project">
+              </div>
+            </div>
+            <div class="logo-list--logo swiper-slide">
+              <div class="image">
+                <img src="./assets/images/realestate-com-au-logo-vector-2023_1.png" width="200.0" height="59.5" alt="Realestate">
+              </div>
+            </div>
+            <div class="logo-list--logo swiper-slide">
+              <div class="image">
+                <img src="./assets/images/media-courier-mail-logo_1.png" width="191.0" height="32.0" alt="the Courier Mail">
+              </div>
+            </div>
+            <div class="logo-list--logo swiper-slide">
+              <div class="image">
+                <img src="./assets/images/the-australian-newspaper-logo_1_2.png" width="172.0" height="66.0" alt="the Australian">
+              </div>
+            </div>
+          </div>
+          <div class="medium-hide large-up--hide" style="--swiper-navigation-color: #000; --swiper-navigation-size: 24px;">
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+          </div>
+        </div>
       </div>
     </section>
   </main>
