--- a/index.html
+++ b/index.html
@@ -98,6 +98,66 @@
         </div>
       </div>
     </section>
+
+    <section class="es-image-gallery">
+      <div class="container">
+        <div class="image-gallery--list">
+          <div class="image-gallery--item image-gallery--item-landscape">
+            <div class="image">
+              <img src="./assets/images/photos/Web and Insta Res-5.jpg" alt="Web and Insta Res" loading="lazy">
+            </div>
+          </div>
+          <div class="image-gallery--item image-gallery--item-portrait">
+            <div class="image">
+              <img src="./assets/images/photos/Full Res-10.jpg" alt="Full Res-10" loading="lazy">
+            </div>
+          </div>
+          <div class="image-gallery--item image-gallery--item-portrait">
+            <div class="image">
+              <img src="./assets/images/photos/Full_Res-24_1.jpg" alt="Full_Res-24_1" loading="lazy">
+            </div>
+          </div>
+          <div class="image-gallery--item image-gallery--item-landscape">
+            <div class="image">
+              <img src="./assets/images/photos/Full Res-32.jpg" alt="Full Res-32" loading="lazy">
+            </div>
+          </div>
+          <div class="image-gallery--item image-gallery--item-landscape">
+            <div class="image">
+              <img src="./assets/images/photos/Full_Res-31_1.jpg" alt="Full_Res-31_1" loading="lazy">
+            </div>
+          </div>
+          <div class="image-gallery--item image-gallery--item-portrait">
+            <div class="image">
+              <img src="./assets/images/photos/Web and Insta Res-1.jpg" alt="Web and Insta Res-1" loading="lazy">
+            </div>
+          </div>
+          <div class="image-gallery--item image-gallery--item-portrait hide">
+            <div class="image">
+              <img src="./assets/images/photos/Full Res-7.jpg" alt="Full Res-7" loading="lazy">
+            </div>
+          </div>
+          <div class="image-gallery--item image-gallery--item-landscape hide">
+            <div class="image">
+              <img src="./assets/images/photos/Full Res-8.jpg" alt="Full Res-8" loading="lazy">
+            </div>
+          </div>
+          <div class="image-gallery--item image-gallery--item-landscape hide">
+            <div class="image">
+              <img src="./assets/images/photos/Web and Insta Res-25.jpg" alt="Web and Insta Res-25" loading="lazy">
+            </div>
+          </div>
+          <div class="image-gallery--item image-gallery--item-portrait hide">
+            <div class="image">
+              <img src="./assets/images/photos/Web and Insta Res-17.jpg" alt="Web and Insta Res-17" loading="lazy">
+            </div>
+          </div>
+        </div>
+        <div class="image-gallery--button-wrapper center">
+          <button class="button button--secondary image-gallery--load-more">See full gallery</button>
+        </div>
+      </div>
+    </section>
   </main>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
