--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div>
     </section>
 
-    <section class="logo-list">
+    <section class="logo-list" id="LogoList">
       <div class="container">
         <div class="caption text-center">As Seen In</div>
         <div class="logo-list--logos swiper">
@@ -99,7 +99,7 @@
       </div>
     </section>
 
-    <section class="es-image-gallery">
+    <section class="es-image-gallery" id="ImageGallery">
       <div class="container">
         <div class="image-gallery--list">
           <div class="image-gallery--item image-gallery--item-landscape">
