--- a/index.html
+++ b/index.html
@@ -159,6 +159,37 @@
       </div>
     </section>
   </main>
+
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 col-sm-12 col-12">
+          <div class="footer--logo">
+            <img src="./assets/images/logo-black.svg" alt="Footer Logo">
+          </div>
+          <div class="footer--description">
+            Mediterranean-inspired photoshoot location 
+          </div>
+          <div class="footer--location">
+            <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <g clip-path="url(#clip0_2_71)">
+                <path d="M8.00002 8.88411C9.10459 8.88411 10 7.98868 10 6.88411C10 5.77954 9.10459 4.88411 8.00002 4.88411C6.89545 4.88411 6.00002 5.77954 6.00002 6.88411C6.00002 7.98868 6.89545 8.88411 8.00002 8.88411Z" stroke="#393939" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M8.00002 14.8841C10.6667 12.2174 13.3334 9.82963 13.3334 6.88411C13.3334 3.9386 10.9455 1.55078 8.00002 1.55078C5.0545 1.55078 2.66669 3.9386 2.66669 6.88411C2.66669 9.82963 5.33335 12.2174 8.00002 14.8841Z" stroke="#393939" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              </g>
+              <defs>
+                <clipPath id="clip0_2_71">
+                  <rect width="16" height="16" fill="white" transform="translate(0 0.217285)"/>
+                </clipPath>
+              </defs>
+            </svg>  
+            <span>Holland Park, Brisbane</span>
+          </div>
+        </div>
+        <div class="col-md-6 col-sm-12 col-12"></div>
+        <div class="col-md-3 col-sm-12 col-12"></div>
+      </div>
+    </div>
+  </footer>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.js" integrity="sha512-Ysw1DcK1P+uYLqprEAzNQJP+J4hTx4t/3X2nbVwszao8wD+9afLjBQYjz7Uk4ADP+Er++mJoScI42ueGtQOzEA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
