--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <title>Grece - Homepage</title>
 
   <link rel="icon" type="image/x-icon" href="./assets/images/favicon.jpg">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.css" integrity="sha512-rd0qOHVMOcez6pLWPVFIv7EfSdGKLt+eafXh4RO/12Fgr41hDQxfGvoi1Vy55QIVcQEujUE1LQrATCLl2Fs+ag==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -162,7 +166,7 @@
 
   <footer>
     <div class="container">
-      <div class="row">
+      <div class="row align-items-center">
         <div class="col-md-3 col-sm-12 col-12">
           <div class="footer--logo">
             <img src="./assets/images/logo-black.svg" alt="Footer Logo">
@@ -185,8 +189,30 @@
             <span>Holland Park, Brisbane</span>
           </div>
         </div>
-        <div class="col-md-6 col-sm-12 col-12"></div>
-        <div class="col-md-3 col-sm-12 col-12"></div>
+        <div class="col-md-6 col-sm-12 col-12">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Design</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Offerings</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-3 col-sm-12 col-12">
+          <div class="footer-award">
+            <div class="footer-award--image">
+              <img src="./assets/images/AWARD-LOGO-FOR-WEBSITE-lr 1.png" alt="Award Image">
+            </div>
+            <div class="footer-award--text">Individual Home Award Winner</div>
+          </div>
+        </div>
       </div>
     </div>
   </footer>
