--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand me-auto logo-wrapper" href="/">
+        <a class="navbar-brand me-auto logo-wrapper" href="./">
           <img src="./assets/images/logo-white.svg" class="logo-white" alt="Grece Logo White">
           <img src="./assets/images/logo-black.svg" class="logo-black" alt="Grece Logo Black">
         </a>
@@ -159,6 +159,18 @@
         </div>
         <div class="image-gallery--button-wrapper center">
           <button class="button button--secondary image-gallery--load-more">See full gallery</button>
+        </div>
+      </div>
+    </section>
+
+    <section class="video">
+      <div class="container text-center">
+        <p class="caption">Location</p>
+        <h2 class="h2">Walk through Grèce</h2>
+        <div class="video-wrapper">
+          <iframe width="1160" height="652"
+            src="https://youtu.be/XZQspofvyQA?si=CvuGJ1j-8bcHvBt3&autoplay=1&mute=1">
+          </iframe>
         </div>
       </div>
     </section>
