--- a/index.html
+++ b/index.html
@@ -168,9 +168,11 @@
         <p class="caption">Location</p>
         <h2 class="h2">Walk through Grèce</h2>
         <div class="video-wrapper">
-          <iframe width="1160" height="652"
-            src="https://youtu.be/XZQspofvyQA?si=CvuGJ1j-8bcHvBt3&autoplay=1&mute=1">
+          <iframe width="1160" height="652" 
+            src="https://www.youtube.com/embed/XZQspofvyQA?autoplay=1&mute=1" 
+            frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
           </iframe>
+
         </div>
       </div>
     </section>
