About / Image with Text #1 / Desktop

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
   <main>
     <section class="image-with-text">
       <div class="container">
-        <div class="row">
+        <div class="row align-items-center justify-content-center">
           <div class="col-md-6 col-sm-12 col-12">
             <div class="image-with-text--image">
               <img src="./assets/images/Full Res-27 1.png" alt="About page's Hero banner">
@@ -57,7 +57,19 @@
           </div>
           <div class="col-md-6 col-sm-12 col-12">
             <div class="image-with-text--text">
-              <div class="caption"></div>
+              <div class="caption">BEHIND THE DESIGN</div>
+              <h1 class="h1">A tribute to rich Greek heritage and a deep-seated love for the Mediterranean way of life.</h1>
+              <div class="description">Inspired by the Mediterranean charm that Thessy and Georgio hold close to their hearts, Grece was brought to life over three years of careful planning and design. Every inch of this home was deliberately crafted to reflect the beauty, functionality, and timeless elegance of Mediterranean living.</div>
+              <div class="button-group">
+                <a href="#" class="btn btn-dark">Book now</a>
+                <a href="#" class="btn btn-outline-dark">See full gallery</a>
+              </div>
+              <ul>
+                <li><span>Features</span></li>
+                <li><span>Designer details</span></li>
+                <li><span>Behind the build</span></li>
+                <li><span>Meet the owners</span></li>
+              </ul>
             </div>
           </div>
         </div>
