--- a/index.html
+++ b/index.html
@@ -169,12 +169,16 @@
         <h2 class="h2">Walk through Grèce</h2>
         <div class="video-wrapper">
           <iframe width="1160" height="652" 
-            src="https://www.youtube.com/embed/XZQspofvyQA?autoplay=1&mute=1" 
+            src="https://www.youtube.com/embed/XZQspofvyQA?autoplay=0&mute=0" 
             frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
           </iframe>
 
         </div>
       </div>
+    </section>
+
+    <section class="instagram-feed">
+      <div class='sk-instagram-feed' data-embed-id='25507860'></div><script src='https://widgets.sociablekit.com/instagram-feed/widget.js' defer></script>
     </section>
   </main>
 
