About / Image with Text #2

--- a/about.html
+++ b/about.html
@@ -47,10 +47,10 @@
   </header>
 
   <main>
-    <section class="image-with-text">
+    <section class="image-with-text section-padding small-pt-0">
       <div class="container">
         <div class="row align-items-center justify-content-center">
-          <div class="col-md-6 col-sm-12 col-12">
+          <div class="col-md-6 col-sm-12 col-12 small-py-0">
             <div class="image-with-text--image">
               <img src="./assets/images/Full Res-27 1.png" alt="About page's Hero banner">
             </div>
@@ -70,6 +70,137 @@
                 <li><span>Behind the build</span></li>
                 <li><span>Meet the owners</span></li>
               </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="logo-list" id="LogoList">
+      <div class="container">
+        <div class="caption text-center">As Seen In</div>
+        <div class="logo-list--logos swiper">
+          <div class="swiper-wrapper">
+            <div class="logo-list--logo swiper-slide">
+              <div class="image">
+                <img src="./assets/images/TLP_1.png" width="210.0" height="54.0" alt="the Local Project">
+              </div>
+            </div>
+            <div class="logo-list--logo swiper-slide">
+              <div class="image">
+                <img src="./assets/images/realestate-com-au-logo-vector-2023_1.png" width="200.0" height="59.5" alt="Realestate">
+              </div>
+            </div>
+            <div class="logo-list--logo swiper-slide">
+              <div class="image">
+                <img src="./assets/images/media-courier-mail-logo_1.png" width="191.0" height="32.0" alt="the Courier Mail">
+              </div>
+            </div>
+            <div class="logo-list--logo swiper-slide">
+              <div class="image">
+                <img src="./assets/images/the-australian-newspaper-logo_1_2.png" width="172.0" height="66.0" alt="the Australian">
+              </div>
+            </div>
+          </div>
+          <div class="medium-hide large-up--hide" style="--swiper-navigation-color: #000; --swiper-navigation-size: 24px;">
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="rich-text section-padding" id="RichText">
+      <div class="container text-center">
+        <h2 class="h2 text">About Grèce</h2>
+        <div class="description">Step into Grece, a Mediterranean-inspired sanctuary in Brisbane, masterfully designed for photo shoots, commercials, and intimate events. Every element of Grece has been meticulously curated with creativity in mind, from its natural light-drenched interiors to its stunning architectural details. The home is thoughtfully constructed to maximize the visual impact, with lighting that enhances every frame and backdrop, ensuring your project stands out. Whether you're shooting stills, video, or hosting a private event, Grece’s versatility brings beauty and depth to every moment.</div>
+      </div>
+    </section>
+
+    <section class="image-with-text">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-md-6 col-sm-12 col-12">
+            <div class="image-with-text--image">
+              <img src="./assets/images/Hero 3.png" alt="">
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-12 col-12">
+            <div class="image-with-text--text">
+              <h3 class="h3">Custom Shoot Areas</h3>
+              <div class="description">Designed specifically for photo and video shoots, Grèce offers adaptable spaces that cater to a range of creative projects, providing a wide range of diverse perfect backdrops every time.</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="image-with-text section-padding">
+      <div class="container">
+        <div class="row align-items-center image-right">
+          <div class="col-md-6 col-sm-12 col-12">
+            <div class="image-with-text--text">
+              <h3 class="h3">Textured Surfaces</h3>
+              <div class="description">From rustic Mediterranean stone to sleek modern stucco, the textured finishes throughout Grèce add dimension and a rich, tactile quality to your visuals, elevating any aesthetic.</div>
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-12 col-12 small-order-0">
+            <div class="image-with-text--image">
+              <img src="./assets/images/Hero 4.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="image-with-text">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-md-6 col-sm-12 col-12">
+            <div class="image-with-text--image">
+              <img src="./assets/images/Hero 6.png" alt="">
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-12 col-12">
+            <div class="image-with-text--text">
+              <h3 class="h3">Natural Lighting</h3>
+              <div class="description">Expansive windows flood the space with natural light, highlighting the key areas for your shoot. The thoughtful architectural design ensures that lighting is a defining feature, creating professional-grade images effortlessly.</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="image-with-text section-padding">
+      <div class="container">
+        <div class="row align-items-center image-right">
+          <div class="col-md-6 col-sm-12 col-12">
+            <div class="image-with-text--text">
+              <h3 class="h3">Wellness Space</h3>
+              <div class="description">Featuring a fully equipped wellness area and gym, Grèce is ideal for health and fitness shoots, offering an additional layer of versatility.</div>
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-12 col-12 small-order-0">
+            <div class="image-with-text--image">
+              <img src="./assets/images/Hero 7.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="image-with-text">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-md-6 col-sm-12 col-12">
+            <div class="image-with-text--image">
+              <img src="./assets/images/Hero 8.png" alt="">
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-12 col-12">
+            <div class="image-with-text--text">
+              <h3 class="h3">On-site Parking</h3>
+              <div class="description">With a spacious two-car garage, Grèce makes setup and pack-down seamless, allowing your crew to focus on the creative process.</div>
             </div>
           </div>
         </div>
