--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
     </section>
 
-    <section class="rich-text" id="RichText">
+    <section class="rich-text section-padding" id="RichText">
       <div class="container text-center">
         <h2 class="h2 text">Perched upon a hill, Grèce captures views of Brisbane city with beautiful curves and thoughtful finishes. A true oasis-like location that pulls inspiration from Greek heritage.</h2>
         <a href="./about.html" class="link">ABOUT GRÈCE</a>
@@ -103,7 +103,7 @@
       </div>
     </section>
 
-    <section class="es-image-gallery" id="ImageGallery">
+    <section class="es-image-gallery section-padding" id="ImageGallery">
       <div class="container">
         <div class="image-gallery--list">
           <div class="image-gallery--item image-gallery--item-landscape">
@@ -177,8 +177,13 @@
       </div>
     </section>
 
-    <section class="instagram-feed">
-      <div class='sk-instagram-feed' data-embed-id='25507860'></div><script src='https://widgets.sociablekit.com/instagram-feed/widget.js' defer></script>
+    <section class="instagram-feed section-padding">
+      <div class="container text-center">
+        <div class="caption">SOCIALS</div>
+        <h2 class="h2">@grece___________</h2>
+        <div class='sk-instagram-feed' data-embed-id='25507893'></div>
+        <script src='https://widgets.sociablekit.com/instagram-feed/widget.js' defer></script>
+      </div>
     </section>
   </main>
 
