About / Image with text / with Background

--- a/about.html
+++ b/about.html
@@ -206,6 +206,45 @@
         </div>
       </div>
     </section>
+
+    <section class="image-with-text section-padding">
+      <div class="container">
+        <div class="row align-items-center my-0 with-background">
+          <div class="col-md-4 col-sm-12 col-12 medium-pl-0">
+            <div class="image-with-text--image">
+              <img src="./assets/images/b99599_3953501c885c456cb568d5c62519764e~mv2 1.png" alt="">
+            </div>
+          </div>
+          <div class="col-md-8 col-sm-12 col-12">
+            <div class="image-with-text--text">
+              <div class="image-with-text--logo">
+                <img src="./assets/images/ESAT Design_Brandmark ONYX 1 (1).png" alt="">
+              </div>
+              <div class="description">Designed by Esat Design, a leading creative practice that marries beauty and practicality in every project. Esat’s philosophy centers on creating spaces that not only look stunning but also serve a functional purpose. The outcome is a home that offers striking aesthetics, superb liveability, and a unique character that feels both welcoming and luxurious.</div>
+              <a href="#" class="link">VISIT WEBSITE</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row align-items-center my-0 with-background">
+          <div class="col-md-4 col-sm-12 col-12 medium-pl-0">
+            <div class="image-with-text--image">
+              <img src="./assets/images/b99599_3953501c885c456cb568d5c62519764e~mv2 2.png" alt="">
+            </div>
+          </div>
+          <div class="col-md-8 col-sm-12 col-12">
+            <div class="image-with-text--text">
+              <div class="image-with-text--logo">
+                <img src="./assets/images/66541f2722eae2de18dc8c2b_Group 23 1 (1).png" alt="">
+              </div>
+              <div class="description">Built by Batspac, with over 25 years of combined experience across  Brisbane and beyond, Batspac has established itself as a pillar in the  realm of luxury residential and commercial design and construction.</div>
+              <a href="#" class="link">VISIT WEBSITE</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer>
