About / Meet the owners

--- a/about.html
+++ b/about.html
@@ -245,6 +245,16 @@
         </div>
       </div>
     </section>
+
+    <section class="rich-text section-padding-bottom" id="RichText">
+      <div class="container text-center">
+        <h2 class="h2 text">Meet the owners</h2>
+        <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim  veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea  commodo consequat.</div>
+        <div class="media">
+          <img src="./assets/images/269f55dab62013b9711b10cd6127e80c 1.png" alt="">
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer>
