--- a/book.html
+++ b/book.html
@@ -13,6 +13,9 @@
   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.css" integrity="sha512-rd0qOHVMOcez6pLWPVFIv7EfSdGKLt+eafXh4RO/12Fgr41hDQxfGvoi1Vy55QIVcQEujUE1LQrATCLl2Fs+ag==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="./assets/plugins/Easy-jQuery-International-Telephone-Input-Plugin-IntlInputPhone/css/intlInputPhone.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
+  <link rel="stylesheet" href="./assets/css/datepicker.css">
   <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body class="template-index">
@@ -47,6 +50,213 @@
   </header>
 
   <main>
+    <section class="media-slider">
+      <div class="container-fluid">
+        <div class="swiper media-swiper-slider">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="image">
+                <img src="./assets/images/photos/Full Res-1.jpg" alt="">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="image">
+                <img src="./assets/images/photos/Full Res-2.jpg" alt="">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="image">
+                <img src="./assets/images/photos/Full Res-3.jpg" alt="">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="image">
+                <img src="./assets/images/photos/Full Res-7.jpg" alt="">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="image">
+                <img src="./assets/images/photos/Full Res-11.jpg" alt="">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="image">
+                <img src="./assets/images/photos/Full_Res-24_1.jpg" alt="">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="image">
+                <img src="./assets/images/photos/Full Res-9.jpg" alt="">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="image">
+                <img src="./assets/images/photos/Full Res-10.jpg" alt="">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="image">
+                <img src="./assets/images/photos/Full Res-12.jpg" alt="">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="image">
+                <img src="./assets/images/photos/Full Res-13.jpg" alt="">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="image">
+                <img src="./assets/images/photos/Full Res-29.jpg" alt="">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="image">
+                <img src="./assets/images/photos/Full Res-30.jpg" alt="">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="image">
+                <img src="./assets/images/photos/Full Res-31.jpg" alt="">
+              </div>
+            </div>
+          </div>
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
+        </div>
+      </div>
+    </section>
+
+    <section class="rich-text section-padding">
+      <div class="container small--text-center">
+        <div class="caption">CONTACT</div>
+        <h2 class="h2" style="max-width: unset;">Book Grèce</h2>
+        <div class="description">Please fill out the contact form in order to book Grèce for your next photoshoot or event. Note that not all booking requests will be accepted and your request will be subject to availability and owner discretion.</div>
+      </div>
+    </section>
+
+    <section class="form-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-sm-12 col-12">
+            <form action="" class="booking-form">
+              <div class="row">
+                <div class="col-md-6 col-sm-12 col-12">
+                  <div class="form-group">
+                    <label for="firstName">First name</label>
+                    <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First name" required>
+                  </div>
+                </div>
+                <div class="col-md-6 col-sm-12 col-12">
+                  <div class="form-group">
+                    <label for="lastName">Last name</label>
+                    <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last name" required>
+                  </div>
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" class="form-control" id="email" name="email" placeholder="you@company.com" required>
+              </div>
+              <div class="form-group">
+                <label for="phone">Phone number</label>
+                <div class="input-phone"></div>
+              </div>
+              <div class="form-group">
+                <label for="company">Company</label>
+                <input type="text" class="form-control" id="company" name="company" zplaceholder="Acme Corporation">
+              </div>
+
+              <div class="form-group">
+                <label for="preferred_date">Preferred date</label>
+                <div class="docs-datepicker">
+                  <div class="input-group">
+                    <div class="input-group-append">
+                      <button type="button" class="btn btn-outline-secondary docs-datepicker-trigger" disabled>
+                        <img src="./assets/images/Icon.svg" alt="">
+                      </button>
+                    </div>
+                    <input type="text" class="form-control docs-date" name="date" id="preferred_date" placeholder="Select date..." autocomplete="off" required>
+                  </div>
+                  <div class="docs-datepicker-container"></div>
+                </div>
+              </div>
+
+              <div class="row timepicker-wrapper">
+                <div class="col-md-6 col-sm-12 col-12">
+                  <div class="form-group">
+                    <label for="startTime">Start time</label>
+                    <div class="input-group">
+                      <img src="./assets/images/Icon (1).svg" alt="">
+                      <input type="text" class="form-control timepicker" id="startTime" name="startTime" placeholder="08:00" required>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6 col-sm-12 col-12">
+                  <div class="form-group">
+                    <label for="endTime">End time</label>
+                    <div class="input-group">
+                      <img src="./assets/images/Icon (1).svg" alt="">
+                      <input type="text" class="form-control timepicker" id="endTime" name="endTime" placeholder="13:00" required>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="form-group">
+                <label for="message">Message</label>
+                <textarea name="message" id="message" class="form-control" rows="5" placeholder="Leave us a message..."></textarea>
+              </div>
+
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" name="privacy_policy" value="" id="flexCheckDefault">
+                <label class="form-check-label" for="flexCheckDefault">
+                  You agree to our friendly <a href="#">privacy policy</a>.
+                </label>
+              </div>
+
+              <button type="submit" class="btn btn-dark btn-block" disabled>Submit enquiry</button>
+            </form>
+          </div>
+          <div class="col-md-6 col-sm-12 col-12">
+            <div class="info-wrapper">
+              <div class="info-item">
+                <h3 class="h3">Important information</h3>
+                <div class="description">
+                  <ul>
+                    <li>Starting from $535/hr</li>
+                    <li>Minimum 4 hour bookings</li>
+                    <li>Bedroom use prohibited</li>
+                    <li>Pets not allowed</li>
+                    <li>Child-friendly</li>
+                    <li>No party policy</li>
+                  </ul>
+                  <p>Read our cancellation policy for all information.</p>
+                </div>
+              </div>
+              <div class="info-item">
+                <h3 class="h3">Opening hours</h3>
+                <ul class="description">
+                  <li>Monday – Friday</li>
+                  <li>8.00am – 6.00pm</li>
+                </ul>
+              </div>
+              <div class="info-item">
+                <h3 class="h3">Contact us</h3>
+                <p class="description"><a href="mailto:hello@grece.com.au">hello@grece.com.au</a> for all non-booking enquiries.</p>
+              </div>
+              <div class="info-item">
+                <h3 class="h3">Location</h3>
+                <div class="map-wrapper">
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14151.35543842338!2d153.0554949679417!3d-27.536464930684197!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b915ad502e3482d%3A0x502a35af3de9170!2sMount%20Gravatt%20QLD%2C%20Australia!5e0!3m2!1sen!2ssg!4v1736643697765!5m2!1sen!2ssg" width="500" height="218" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div class="description">Exact location provided after confirmed booking.</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="logo-list section-padding" id="LogoList">
       <div class="container">
         <div class="caption text-center">As Seen In</div>
@@ -135,8 +345,12 @@
     </div>
   </footer>
   
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js" integrity="sha512-jGR1T3dQerLCSm/IGEGbndPwzszJBlKQ5Br9vuB0Pw2iyxOy+7AK+lJcCC8eaXyz/9du+bkCy4HXxByhxkHf+w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/11.0.5/swiper-bundle.min.js" integrity="sha512-Ysw1DcK1P+uYLqprEAzNQJP+J4hTx4t/3X2nbVwszao8wD+9afLjBQYjz7Uk4ADP+Er++mJoScI42ueGtQOzEA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="./assets/js/main.js"></script>
+  <script src="./assets/plugins/Easy-jQuery-International-Telephone-Input-Plugin-IntlInputPhone/js/intlInputPhone.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
+  <script src="./assets/js/datepicker.js" defer></script>
+  <script src="./assets/js/main.js" defer></script>
 </body>
 </html>
