--- a/about.html
+++ b/about.html
@@ -61,8 +61,8 @@
               <h1 class="h1">A tribute to rich Greek heritage and a deep-seated love for the Mediterranean way of life.</h1>
               <div class="description">Inspired by the Mediterranean charm that Thessy and Georgio hold close to their hearts, Grece was brought to life over three years of careful planning and design. Every inch of this home was deliberately crafted to reflect the beauty, functionality, and timeless elegance of Mediterranean living.</div>
               <div class="button-group">
-                <a href="#" class="btn btn-dark">Book now</a>
-                <a href="#" class="btn btn-outline-dark">See full gallery</a>
+                <a href="./book.html" class="btn btn-dark">Book now</a>
+                <a href="./book.html" class="btn btn-outline-dark">See full gallery</a>
               </div>
               <ul>
                 <li><span>Features</span></li>
@@ -221,7 +221,7 @@
                 <img src="./assets/images/ESAT Design_Brandmark ONYX 1 (1).png" alt="">
               </div>
               <div class="description">Designed by Esat Design, a leading creative practice that marries beauty and practicality in every project. Esat’s philosophy centers on creating spaces that not only look stunning but also serve a functional purpose. The outcome is a home that offers striking aesthetics, superb liveability, and a unique character that feels both welcoming and luxurious.</div>
-              <a href="#" class="link">VISIT WEBSITE</a>
+              <a href="./book.html" class="link">VISIT WEBSITE</a>
             </div>
           </div>
         </div>
@@ -239,7 +239,7 @@
                 <img src="./assets/images/66541f2722eae2de18dc8c2b_Group 23 1 (1).png" alt="">
               </div>
               <div class="description">Built by Batspac, with over 25 years of combined experience across  Brisbane and beyond, Batspac has established itself as a pillar in the  realm of luxury residential and commercial design and construction.</div>
-              <a href="#" class="link">VISIT WEBSITE</a>
+              <a href="./book.html" class="link">VISIT WEBSITE</a>
             </div>
           </div>
         </div>
@@ -288,13 +288,13 @@
               <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Design</a>
+              <a class="nav-link" href="./book.html">Design</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Offerings</a>
+              <a class="nav-link" href="./book.html">Offerings</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="./book.html">Contact</a>
             </li>
           </ul>
         </div>
