--- a/book.html
+++ b/book.html
@@ -136,7 +136,7 @@
 
     <section class="form-section">
       <div class="container">
-        <div class="row">
+        <div class="row align-items-center">
           <div class="col-md-6 col-sm-12 col-12">
             <form action="" class="booking-form">
               <div class="row">
@@ -323,13 +323,13 @@
               <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Design</a>
+              <a class="nav-link" href="./book.html">Design</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Offerings</a>
+              <a class="nav-link" href="./book.html">Offerings</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="./book.html">Contact</a>
             </li>
           </ul>
         </div>
