--- a/book.html
+++ b/book.html
@@ -32,13 +32,13 @@
         <div class="collapse navbar-collapse" id="mynavbar">
           <ul class="navbar-nav align-items-center">
             <li class="nav-item">
-              <a class="nav-link" href="javascript:void(0)">Design</a>
+              <a class="nav-link" href="./book.html">Design</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="javascript:void(0)">Offerings</a>
+              <a class="nav-link" href="./book.html">Offerings</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="javascript:void(0)">Contact</a>
+              <a class="nav-link" href="./book.html">Contact</a>
             </li>
             <li class="nav-item">
               <a class="btn btn-outline-dark" href="./book.html">Book now</a>
